# CryoET-RobPicker

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train_meta.py
data/meta/: tomo1333_objl.xml  tomo1694_objl.xml
data/test/: tomo2814_objl.xml  tomo2816_objl.xml
data/train/: tomo0137_objl.xml  tomo0145_objl.xml  tomo0178_objl.xml  tomo0269_objl.xml  tomo0295_objl.xml  tomo1287_objl.xml  tomo1317_objl.xml  tomo1959_objl.xml  tomo2025_objl.xml  tomo2038_objl.xml  tomo2048_objl.xml  tomo2158_objl.xml  tomo2224_objl.xml  tomo2252_objl.xml
docs/: evaluate.md  train.md
robpicker/: evaluate.py  star2xml.py  train_meta.py  utils.py
robpicker/configs/: cfg_resnet34.py  common_config.py  meta_config.py
robpicker/data/: ds.py
robpicker/meta/: __init__.py  engine.py  meta_modules.py  problems.py
robpicker/metrics/: metric.py
robpicker/models/: net_meta.py
robpicker/postprocess/: pp.py
